--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
             <h3 class="text-center">The Big Man</h3>
             <!-- write a paragraph explaining why your person is so great  -->
-            <p>PewDiePie, or Felix Kjellburg, has the most subscribers independntly. He used to have the most overall but recently a channel named T-Series that is a company that has surpassed him. PewDiePie has had the most amount of subscribers for around 6-7 years now independently, which is amazing cause of how youtube works. Currently PewDiePie has 101 million subs and he got a new playbutton that hasnt gotten given out yet (a youtube playbutton is a thing that you get after you get a certain amount of subcribers to your channel.)PewDiePie has also amassed around 23 billion views on his channel.
+            <p>PewDiePie, or Felix Kjellburg, has the most subscribers independntly. He used to have the most overall but recently a channel named T-Series that is a company that has surpassed him. PewDiePie has had the most amount of subscribers for around 6-7 years now independently, which is amazing cause of how youtube works. Currently PewDiePie has 101 million subs and he got a new playbutton that hasnt gotten given out yet a youtube playbutton is a thing that you get after you get a certain amount of subcribers to your channel.)PewDiePie has also amassed around 23 billion views on his channel.
             </p>
           </div>
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
